--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -31,10 +31,10 @@ Julien Vollering: <https://orcid.org/0000-0002-7409-2898>
 # Abstract
 
 1. Plantations of alien conifer species are common worldwide, and set to become even more prevalent in coming decades. The rate at which their offspring colonize surroundings varies among similar plantations, and the reasons for this variation are often unclear. To curb the spread of so-called "wildlings" and minimize the burden of valued conifer plantations on native ecosystems, managers need to know which places and ecosystems are most and least vulnerable.
-2. We compare how likely conifer wildlings are to establish across a wide range of ecosystem types, focusing on four groups of alien species planted in Norway. We use data from detailed surveys around 82 plantations to model the relationship between ecosystem type and wildling abundance --- accounting for seed rain, climate, and other sources of variation between sites. Further, we check whether differences in vulnerabilty between individual ecosystem types can be generalized, based on broad-brush characteristics used to classify ecosystem types.
-3. We found that conifer wildlings were several orders of magnitude more likely to establish in the most vulnerable ecosystem types than in the least vulnerable ecosystem types. This range of variation from our models was larger than the range of variation in the raw densities of wildlings across ecosystem types. Accounting for seed rain, climate, and site variation also changed the rank vulnerabilities of ecosystem types. 
-4. The four groups of conifer species showed modestly similar patterns of establishment likelihood across ecosystem types, with some agricultural ecosystem types repeatedly among the least vulnerable. However, broad hydrological and disturbance characteristics of ecosystem types did not summarize patterns of vulnerability well. 
-6. *Synthesis and applications* Wider implications and relevance to management, synthesis of the paper's key messages, generic, seminal and accessible to non-specialists. Our results... Managers should be careful not to conflate an ecosystem type's density of alien species with its vulnerability to these species, relative to other ecosystem types. Managers should not assume that ostensibly similar ecosystems are equally or even similarly vulnerable.  ...restrict new plantations to low-risk sites, design efficient monitoring, and target interventions.
+2. We compare how likely wildlings are to establish across a wide range of ecosystem types, focusing on four groups of alien conifer species planted in Norway. We use data from detailed surveys around 82 plantations to model the relationship between ecosystem type and wildling abundance --- accounting for seed rain, climate, and other sources of variation between sites. Further, we check whether differences in vulnerability between individual ecosystem types can be generalized based on broad, shared characteristics.
+3. We found that the four groups of conifer species showed somewhat similar patterns of establishment likelihood across ecosystem types, with intensively farmed ecosystem types repeatedly among the least vulnerable. However, broad hydrological and disturbance characteristics of ecosystem types did not summarize patterns of vulnerability well. 
+4. Wildlings were several orders of magnitude more likely to establish in the most vulnerable ecosystem types than in the least vulnerable ecosystem types. This range of variation was larger than that of wildling densities across ecosystem types. Accounting for seed rain, climate, and site variation also changed the rank vulnerabilities of ecosystem types. 
+6. *Synthesis and applications* Efforts to keep alien conifers within plantation boundaries have the opportunity to exploit large differences in wildling establishment between ecosystem types. To do so effectively, managers need to be aware that the relative density of wildlings observed in a given ecosystem type (or other management unit) does not generally reflect that ecosystem's relative vulnerability, since confounders obscure this relationship. Nor should managers assume that ostensibly similar ecosystems are similarly vulnerable. A careful accounting of variation in wildling spread gives us the knowledge to restrict new plantations to low-risk sites and to make monitoring and intervention more efficient.
 
 # Keywords
 
@@ -276,8 +276,8 @@ First, as a preventative measure, we recommend siting new plantations where surr
 In particular, "arable fields" harbor very few wildlings of any species and are common near existing plantations, so picking sites hemmed in by this kind of agricultural land should be both effective and feasible.
 This would likely reduce the rate of wildling establishment by orders of magnitude, even if long distance dispersal might preclude complete containment [@albertLanduseChangeSubalpine2008]. 
 In some cases it may also be desireable to alter ecosystem types adjacent to existing plantations to prevent (further) spread, for example by intensifying mowing regimes to promote the appearance of "agriculturally improved grassland".
-Second, as a reactive measure, we recommend targeting resources for monitoring and control towards highly vulnerable ecosystem types.
-Applying this strategy to ecosystem types that are rare as well as vulnerable, like "open active landslide", is especially likely to be cost-efficient. 
+Second, as a reactive measure, we recommend distributing resources for monitoring and control in proportion to relative ecosystem vulnerability.
+Prioritizing ecosystem types that are highly vulnerable and also rare, like "open active landslide", is especially likely to be cost-efficient. 
 
 The establishment patterns we quantify are likely to hold, more or less, beyond Norway [@chytryHabitatInvasionsAlien2008].
 From a manager's perspective, we expect that the ecosystem types we report may translate well to equivalent types in similar classification systems, because the Nature in Norway classification is rule-based and aims for observer neutrality. 
