--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -113,27 +113,17 @@ For our second analysis --- isolating the effect of ecosystem type on establishm
 Because conspecific plantations were sometimes located nearby the central plantation, we considered all plantations within a 1 km radius to be potential seed sources.
 We used two models of seed dispersal to derive two different estimates of relative seed rain in space.
 
-The first model was an empirical seed dispersal location kernel [@nathanDispersalKernels2012], with parameter estimates generalized from multiple data sets.
+The first model was an empirical seed dispersal location kernel, with parameter estimates generalized from multiple data sets.
 Specifically, we selected from Bullock et al. [-@bullockSynthesisEmpiricalPlant2017] the kernel that performed best for wind-adapted seeds from 5-15 m tall trees (an Exponential Power function).
-Seventy-two of the 82 plantations in our data set matched this height range better than a taller height range with a different empirical kernel.
+Seventy-two of the 82 plantations in our data set matched this height range better than a taller range with a different empirical kernel.
 
-The second model was mechanistic, using local wind velocity and direction to parameterize the Wald Analytical Long-distance Dispersal [WALD, @katulMechanisticAnalyticalModels2005] model in different directions from seed sources [following @skarpaasDispersalPatternsDispersal2007].
-The WALD model takes the form of an inverse Gaussian distribution whose mean ($\mu$) and shape ($\lambda$) parameters are calculated from physical characteristics of the dispersal system:
-$$\mu  = \frac{HU}{F}$$
-$$\lambda = \left(\frac{H}{\sigma}\right)^2$$
-where $H$ is the seed release height, $U$ is the mean horizontal wind velocity between $H$ and the ground, $F$ is the terminal velocity of the seed, and $\sigma$ is a wind turbulence parameter.
-We set $H$ to the height of the central plantation, estimated $U$ from a computed vertical wind profile, obtained $F$ from literature (Appendix [A2]), and calculated $\sigma$ from an equation for turbulent flow as a function of vegetation height [@skarpaasDispersalPatternsDispersal2007, eq. A4].
-We parameterized separate WALD models for 20º sectors around each seed source, to make seed dispersal anisotropic (directional).
-In each sector we estimated mean vegetation height based on the composition of mapped ecosystem types (Appendix [A3]).
-Simulataneously, we randomly sampled 100 wind velocities in the direction of the sector during the species' dispersal season (Appendix [A2]).
-The 100 resulting WALD kernels produced the seed probability density in the sector, and individual sectors were weighed by the frequency of corresponding wind directions (again, during the species' dispersal season).
-The wind data were obtained either from the nearest weather station (MET Norway), a 2.5 km resolution interpolated hindcast covering southern Norway [@haakenstad15yearHighResolution2017], or a 10 km resolution hindcast covering all of Norway [@reistadHighresolutionHindcastWind2011; @haakenstadNORA10EIRevisedRegional]. We used weather station data if the station was less than 2.5 or 10 km away (depending on hindcast coverage), or else the highest resolution hindcast.
+The second model was an anisotropic (directional) implementation of the Wald Analytical Long-distance Dispersal [WALD, @katulMechanisticAnalyticalModels2005] model, following Skarpaas et al. [-@skarpaasDispersalPatternsDispersal2007].
+We parameterized the model with: site- and season-specific wind vectors retrieved from meterological data sets, wind turbulence estimated from local ecosystem type composition, seed release height based on plantation height, and species-specific seed terminal velocities from literature.
 
-Both estimates of relative seed rain were expressed on a square grid with a grain of 10 m.
-We chose this cell size to be the same order of magnitude as the smallest allowed ecosystem type polygon.
-Dispersal kernels were applied to the distance from seed source to grid cell center. 
-Field-mapped polygons of seed sources were transformed into hexagonally gridded point sources, with a density of 0.1 m^-2^ for the first model and 0.01 m^-2^ for the second model (to reduce computation time). 
-Additional details about how data from different field campaigns were harmonized to model seed dispersal are explained in Appendix [A4].
+We transformed field-mapped polygons of seed sources into hexagonally gridded point sources, with a density of 0.1 m^-2^ for the first model and 0.01 m^-2^ for the second model (to reduce computation time). 
+Then we applied our two dispersal models to estimate the distribution of seed rain from all point sources in a grid of 10 m cells.
+We chose this cell size to be similar to the smallest allowed ecosystem type polygon.
+A full description of our implementation of the WALD model and additional details about seed source polygons are given in Appendix [A2].
 
 ## Establishment
 
@@ -223,7 +213,7 @@ knitr::kable(cortab,
 
 Relative establishment likelihoods varied more than the corresponding set of raw densities, in all species (fig. \@ref(fig:establishment)).
 Raw densities across all ecosystem types ranged 0-211/ha for Sitka spruce, 0-49/ha for Norway spruce, 0-1045/ha for larch, and 0-219/ha for lodgepole pine.
-For all species, the WALD seed dispersal model produced seed rain values that predicted wildling establishment better than the values derived from the empirical seed dispersal kernel (Appendix [A5]).
+For all species, the WALD seed dispersal model produced seed rain values that predicted wildling establishment better than the values derived from the empirical seed dispersal kernel (Appendix [A4]).
 The direct effect of relative elevation on establishment --- not including its effect mediated by ecosystem types --- was modest and acted in different directions for different species.
 Plantation age effects were estimated near zero in all cases except in the binomial submodels for Sitka/Lutz spruce and larch (where older plantations showed fewer zeros).
 The interaction specified between relative seed rain and plantation age showed inconsistent effects.
@@ -395,13 +385,24 @@ kable(locs, escape = FALSE, align = "lllrrrrrr") %>%
 
 ## A2
 
+The WALD model takes the form of an inverse Gaussian distribution whose mean ($\mu$) and shape ($\lambda$) parameters are calculated from physical characteristics of the dispersal system:
+$$\mu  = \frac{HU}{F}$$
+$$\lambda = \left(\frac{H}{\sigma}\right)^2$$
+where $H$ is the seed release height, $U$ is the mean horizontal wind velocity between $H$ and the ground, $F$ is the terminal velocity of the seed, and $\sigma$ is a wind turbulence parameter.
+We set $H$ to the height of the central plantation, estimated $U$ from a computed vertical wind profile, obtained $F$ from literature, and calculated $\sigma$ from an equation for turbulent flow as a function of vegetation height [eq. A4 in @skarpaasDispersalPatternsDispersal2007].
+We parameterized separate WALD models for 20º sectors around each seed source, to make seed dispersal anisotropic (directional).
+In each sector we estimated mean vegetation height based on the composition of mapped ecosystem types (Appendix [A3]).
+Simulataneously, we randomly sampled 100 wind velocities in the direction of the sector during the species' dispersal season.
+The 100 resulting WALD kernels produced the seed probability density in the sector, and individual sectors were weighed by the frequency of corresponding wind directions (again, during the species' dispersal season).
+The wind data were obtained either from the nearest weather station (MET Norway), a 2.5 km resolution interpolated hindcast covering southern Norway [@haakenstad15yearHighResolution2017], or a 10 km resolution hindcast covering all of Norway [@reistadHighresolutionHindcastWind2011; @haakenstadNORA10EIRevisedRegional]. We used weather station data if the station was less than 2.5 or 10 km away (depending on hindcast coverage), or else the highest resolution hindcast.
+
 ```{r recreate traits-table, include=FALSE}
 traits <- tribble(
   ~`species group`, ~`seed terminal velocity`, ~`dispersal season`, ~references,
-  "Larix spp.", 1.0, "Dec - May", "2, 3",
-  "Picea abies", 0.58, "Nov - May", "2, 4",
-  "Pinus contorta", 0.82, "Sep - Dec", "2",
-  "Picea sitchensis / lutzii", 0.94, "Oct - Feb", "1, 2")
+  "Larix spp.", "1.0 m/s", "Dec - May", "2, 3",
+  "Picea abies", "0.58 m/s", "Nov - May", "2, 4",
+  "Pinus contorta", "0.82 m/s", "Sep - Dec", "2",
+  "Picea sitchensis / lutzii", "0.94 m/s", "Oct - Feb", "1, 2")
 ```
 
 ```{r traits-table}
@@ -414,6 +415,12 @@ kable(traits, escape = FALSE) %>%
                        "4. Sullivan, J. Picea abies. Fire Effects Information System, U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station,  Fire Sciences Laboratory https://www.fs.fed.us/database/feis/plants/tree/picabi/all.html (1994)."), 
             general_title = "References: ")
 ```
+
+Differences between the seed source polygons registered in the field were accounted for as follows.
+Seed source polygons for which the species of interest only made up a fraction of the plantation composition [e.g. in @olsenKartleggingAvKortdistansespredning2019] were used with their point source density adjusted accordingly.
+For example, a plantation identified as composed of Sitka spruce and Norway spruce was assigned a seed source point density half that of a pure Sitka spruce plantation.
+Likewise, 'mixed forest' plantations [e.g. in @appelgrenKartleggingAvKortdistansespredning2018] were assigned 0.1 times the seed source point density of a pure plantation.  
+Seed source polygons identified as logged [e.g. in @appelgrenKartleggingAvKortdistansespredning2018] were included as seed sources only if we could confirm that they were logged no earlier the decade prior to mapping, using time series of aerial photos.
 
 ## A3
 
@@ -436,13 +443,6 @@ kable(typestab, escape = FALSE) %>%
 ```
 
 ## A4
-
-Seed source polygons for which the species of interest only made up a fraction of the plantation composition [e.g. in @olsenKartleggingAvKortdistansespredning2019] were used with their point source density adjusted accordingly.
-For example, a plantation identified as composed of Sitka spruce and Norway spruce was assigned a seed source point density half that of a pure Sitka spruce plantation.
-Likewise, 'mixed forest' plantations [e.g. in @appelgrenKartleggingAvKortdistansespredning2018] were assigned 0.1 times the seed source point density of a pure plantation.  
-Seed source polygons identified as logged [e.g. in @appelgrenKartleggingAvKortdistansespredning2018] were included as seed sources only if we could confirm that they were logged no earlier the decade prior to mapping, using time series of aerial photos.
-
-## A5
 
 ```{r, message=FALSE}
 msumms <- list.files(here('ms', 'tables'), pattern = "summary", full.names = TRUE) %>% 
